--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
+    "vue-tg": "^0.9.0",
     "vue3-apexcharts": "^1.10.0"
   },
   "devDependencies": {
