TIC-11: Исправил опечатки, добавил поддержку Prettier, улучшил правила ESLint

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,13 @@
 {
-  "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
   "singleQuote": true,
-  "printWidth": 100
+  "semi": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "vueIndentScriptAndStyle": true,
+  "htmlWhitespaceSensitivity": "ignore"
 }
